Fixed word wrap and untracked some generated files.

--- a/stylus/newtab.styl
+++ b/stylus/newtab.styl
@@ -91,6 +91,8 @@ centerBkg = #fdfdfd
         button, input[type=checkbox]
             margin 0
             padding 0
+        .cell-center
+            word-break break-word
 
     li, .add-wrapper
         box-shadow 0 1px 3px -2px black
